tests/compiler/expected/output/DeclarationInitializationTypeError.shtk.txt
MODULE DeclarationInitializationTypeError.shtk
ERROR in Line 3 Col 20

    var a:int[3] = 2
                   ^
Type error, did not expect int,
expected int[3]
